<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="airpay_sdk_error_OTP">Invalid OTP</string>
    <string name="airpay_sdk_error_risky_device">Sorry, for your account security AirPay cannot run on rooted/jailbroken device.</string>
    <string name="airpaysdk_button_back">Back</string>
    <string name="airpaysdk_button_cancel">Cancel</string>
    <string name="airpaysdk_button_continue">Continue</string>
    <string name="airpaysdk_button_install">Install</string>
    <string name="airpaysdk_button_install_info">Not sure how to sign up for AirPay</string>
    <string name="airpaysdk_button_submit">Submit</string>
    <string name="airpaysdk_button_update">Update</string>
    <string name="airpaysdk_button_use_airpay">Use AirPay</string>
    <string name="airpaysdk_error_link_ongoing">Another link flow is ongoing</string>
    <string name="airpaysdk_error_linking_failed">Linking failed</string>
    <string name="airpaysdk_error_network_unavailable">Network Unavailable</string>
    <string name="airpaysdk_error_network_unavailable_description">Please check your network connection. Tap the screen to retry.</string>
    <string name="airpaysdk_error_not_an_airpay_request">Not an AirPay request</string>
    <string name="airpaysdk_error_not_installed">AirPay is not installed</string>
    <string name="airpaysdk_error_payment_failed">Payment failed</string>
    <string name="airpaysdk_error_sdk_version_too_low">SDK version is too low</string>
    <string name="airpaysdk_error_signature_invalid">AirPay app signature is invalid</string>
    <string name="airpaysdk_error_unknown">An unknown error has occurred</string>
    <string name="airpaysdk_error_user_not_linked">Your account has not linked with AirPay</string>
    <string name="airpaysdk_error_user_rejected">User rejected the request</string>
    <string name="airpaysdk_error_version_too_low">AirPay version is too low</string>
    <string name="airpaysdk_label_airpay_not_installed">It looks like you haven’t installed AirPay yet. AirPay is a secure eWallet application that offers various lifestyle services and attractive promotions.</string>
    <string name="airpaysdk_label_airpay_not_updated">Your AirPay is not updated. Please update to continue.</string>
    <string name="airpaysdk_label_airpay_will_launch">Your AirPay app have been successfully installed</string>
    <string name="airpaysdk_label_app_name">AirPay</string>
    <string name="airpaysdk_label_enter_otp">Enter OTP</string>
    <string name="airpaysdk_label_order_processing">Order is being processed</string>
    <string name="airpaysdk_label_otp_description">Text field for entering OTP. Please note that OTP could be alphanumeric.</string>
    <string name="airpaysdk_label_pay_with_airpay">AirPay values the safety and security of our user accounts. We require that you proceed with this transaction inside our app.</string>
    <string name="airpaysdk_label_placeholder">Placeholder</string>
    <string name="airpaysdk_order_status_api_disabled_for_merchant">API is disabled for merchant</string>
    <string name="airpaysdk_order_status_error_updating_order">Error updating order</string>
    <string name="airpaysdk_order_status_forbidden_transaction">Forbidden transaction</string>
    <string name="airpaysdk_order_status_invalid_key_id_sign">Invalid key id sign</string>
    <string name="airpaysdk_order_status_invalid_params">Invalid params</string>
    <string name="airpaysdk_order_status_invalid_token">Invalid token</string>
    <string name="airpaysdk_order_status_no_applicable_payment_method">You have insufficient wallet balance and no other applicable payment method</string>
    <string name="airpaysdk_order_status_order_already_refunded">Order was already refunded</string>
    <string name="airpaysdk_order_status_order_not_exist">Order does not exist</string>
    <string name="airpaysdk_order_status_order_not_meet_requirement">Order does not meet requirement</string>
    <string name="airpaysdk_order_status_order_not_refunded">Order is not refunded</string>
    <string name="airpaysdk_order_status_rejected_by_user">Order was rejected by user</string>
    <string name="airpaysdk_order_status_success">Success</string>
    <string name="airpaysdk_order_status_token_expired">Token expired</string>
    <string name="airpaysdk_order_status_unable_to_connect_to_merchant">Unable to connect to merchant</string>
    <string name="airpaysdk_order_status_unknown">Payment failed</string>
    <string name="airpaysdk_order_status_unknown_error">Server error</string>
    <string name="airpaysdk_title_creditcard_verification">Card Verification</string>
    <string name="alert_loading">Loading</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">The Coffee House</string>
    <string name="app_version">null</string>
    <string name="appbar_fixed_behavior">com.airpay.widget.control.FixedAppBarLayoutBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="str_accumulate_points">Tích điểm</string>
    <string name="str_are_you_sure_you_want_to_cancel_order">Bạn có chắc muốn huỷ đơn hàng này?</string>
    <string name="str_cancel_order">Huỷ đơn</string>
    <string name="str_choose_your_birthday">Chọn ngày sinh</string>
    <string name="str_choose_your_gender">Chọn giới tính</string>
    <string name="str_enter_your_first_name">Nhập tên của bạn *</string>
    <string name="str_enter_your_last_name">Nhập họ của bạn</string>
    <string name="str_guide_user_order_at_table_instruction">1. Quét mã QR được in trên bàn tại cửa hàng\102. Chọn món và thanh toán trực tuyến\103. Chờ nhân viên mang nước đến bàn</string>
    <string name="str_guide_user_order_at_table_subtitle">�� Bạn ngại xếp hàng?\10�� Bạn muốn “xí” chỗ ngồi trước?\10☕ Bạn muốn đặt thêm nước mà không muốn rời laptop?</string>
    <string name="str_guide_user_order_at_table_title">Đặt món tại bàn - Không lo xếp hàng</string>
    <string name="str_just_three_steps">Chỉ cần 3 bước:</string>
    <string name="str_list_store_applied_order_at_table">Danh sách các cửa hàng áp dụng</string>
    <string name="str_order_at_table_now">Đặt ngay</string>
    <string name="str_please_select_your_cancel_reason">Vui lòng chọn lý do huỷ</string>
    <string name="str_redeem">Đổi ưu đãi</string>
    <string name="str_send_feedback">Gửi phản hồi</string>
    <string name="str_share_your_ideas">Chia sẻ thêm ý kiến của bạn</string>
    <string name="str_share_your_ideas_hint">Điều gì chúng tôi có thể làm tốt hơn?</string>
    <string name="str_thank_you_for_your_feedback">Cảm ơn đánh giá của bạn</string>
    <string name="str_update">Cập nhật</string>
    <string name="str_vouchers">Phiếu ưu đãi</string>
    <string name="str_what_is_not_good_enough">Bạn cảm thấy Nhà điều gì còn chưa tốt?</string>
</resources>