<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.tabs.TabLayout android:id="@+id/tablayout_rewards" android:background="@color/colorBackgroundLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="@dimen/_1dp" app:tabIndicatorColor="@color/colorC5671B" app:tabSelectedTextColor="@color/colorC5671B" app:tabTextAppearance="@style/rewardTabTextAppearance" app:tabTextColor="@color/colorTextContent">
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_accumulate_points"/>
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_redeem"/>
        <com.google.android.material.tabs.TabItem android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_vouchers"/>
    </com.google.android.material.tabs.TabLayout>
    <FrameLayout android:id="@+id/fragment_rewards_sub_container" android:layout_width="match_parent" android:layout_height="match_parent"/>
</LinearLayout>
