<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/webViewContainer" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.airpay.sdk.v2.activity.view.AirPayActionBar android:id="@+id/actionBar" android:layout_width="match_parent" android:layout_height="wrap_content" app:customStyle="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <ProgressBar android:id="@+id/progressBar" android:layout_width="match_parent" android:layout_height="2dp" android:progressDrawable="@drawable/bg_progress_bar" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/actionBar" style="?android:attr/progressBarStyleHorizontal"/>
        <WebView android:id="@+id/webView" android:background="#000000" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center" android:id="@+id/otpContainer" android:background="@drawable/bg_rounded_white" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginRight="32dp">
        <com.airpay.widget.control.APTextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/txt_color_black" android:id="@+id/dialogHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/airpaysdk_label_enter_otp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
        <com.airpay.widget.control.APTextView android:textSize="14sp" android:textColor="@color/txt_color_grey" android:id="@+id/dialogDesc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/airpaysdk_label_otp_description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialogHeader"/>
        <com.airpay.widget.control.APEditText android:textSize="14sp" android:textColor="@color/txt_color_black" android:textColorHint="@color/txt_color_hint" android:id="@+id/edtOtp" android:background="@drawable/bg_rounded_grey_border" android:padding="8dp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:hint="@string/airpaysdk_label_placeholder" android:maxLines="1" android:inputType="numberPassword" android:textCursorDrawable="@color/txt_color_blue" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dialogDesc"/>
        <com.airpay.widget.control.APTextView android:id="@+id/btnCancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="16dp" android:text="@string/airpaysdk_button_cancel" android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="@+id/btnSubmit" app:layout_constraintEnd_toStartOf="@+id/btnSubmit" app:layout_constraintTop_toTopOf="@+id/btnSubmit" style="@style/flat_btn_standard"/>
        <com.airpay.widget.control.APTextView android:enabled="false" android:id="@+id/btnSubmit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/airpaysdk_button_submit" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toBottomOf="@+id/edtOtp" style="@style/flat_btn_standard"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
