<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/_28sp" android:textColor="@color/color333333" android:id="@+id/txt_cancel_order_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_72dp" android:text="@string/str_are_you_sure_you_want_to_cancel_order" android:layout_alignParentTop="true" android:fontFamily="@font/sfpt_regular" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp"/>
        <TextView android:textSize="@dimen/_16sp" android:textColor="@color/color333333" android:id="@+id/txt_cancel_order_selection_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_64dp" android:text="@string/str_please_select_your_cancel_reason" android:layout_below="@+id/txt_cancel_order_title" android:fontFamily="@font/sfpt_bold" android:layout_marginStart="@dimen/_16dp"/>
        <com.thecoffeehouse.guestapp.views.CustomRadioGroup android:id="@+id/rdg_cancel_reason" android:paddingTop="@dimen/_16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/txt_cancel_order_selection_title"/>
        <Button android:enabled="false" android:textSize="@dimen/_16sp" android:textColor="@color/colorWhite" android:id="@+id/btn_cancel_order" android:background="@drawable/background_cancel_order_disable" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="@dimen/_32dp" android:text="@string/str_cancel_order" android:layout_alignParentBottom="true" android:textAllCaps="false" android:fontFamily="@font/sfpt_bold" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp"/>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
