<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/colorBackgroundLayout" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/toolbar" layout="@layout/layout_sub_header"/>
    <ScrollView android:id="@+id/layout_root_sign_up" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:textColor="@color/colorTextTitle" android:id="@+id/edt_user_first_name" android:background="@drawable/background_corner_stroke_light_gray" android:padding="@dimen/_16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_54dp" android:hint="@string/str_enter_your_first_name" android:includeFontPadding="false" android:inputType="textCapCharacters" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <EditText android:textColor="@color/colorTextTitle" android:id="@+id/edt_user_last_name" android:background="@drawable/background_corner_stroke_light_gray" android:padding="@dimen/_16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:hint="@string/str_enter_your_last_name" android:includeFontPadding="false" android:inputType="textCapCharacters" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/edt_user_first_name"/>
            <EditText android:textColor="@color/colorTextTitle" android:id="@+id/edt_user_birthday" android:background="@drawable/background_corner_stroke_light_gray" android:padding="@dimen/_16dp" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:hint="@string/str_choose_your_birthday" android:includeFontPadding="false" android:editable="false" android:inputType="none" android:drawableEnd="@drawable/ic_text_calendar" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/edt_user_last_name"/>
            <EditText android:textColor="@color/colorTextTitle" android:id="@+id/edt_user_gender" android:background="@drawable/background_corner_stroke_light_gray" android:padding="@dimen/_16dp" android:focusableInTouchMode="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_8dp" android:hint="@string/str_choose_your_gender" android:includeFontPadding="false" android:editable="false" android:inputType="none" android:drawableEnd="@drawable/ic_arrow_down" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp" android:drawableTint="@color/colorBBBBBB" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/edt_user_birthday"/>
            <com.thecoffeehouse.guestapp.views.TLButton android:textColor="@color/colorWhite" android:id="@+id/btn_update" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/_36dp" android:minHeight="@dimen/_48dp" android:text="@string/str_update" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp" app:backgroundColor="@color/colorE3E3E3" app:corner_bot_left="@dimen/_8dp" app:corner_bot_right="@dimen/_8dp" app:corner_top_left="@dimen/_8dp" app:corner_top_right="@dimen/_8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/edt_user_gender" app:layout_constraintVertical_bias="1" style="@style/defaultTitleTextStyle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
