<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView android:paddingBottom="@dimen/_58dp" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/frameLayout" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:id="@+id/imageView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/background_guide_user_order_at_table" android:scaleType="centerCrop" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:textSize="@dimen/_24sp" android:textColor="@color/colorTextTitle" android:id="@+id/textView5" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/_43dp" android:text="@string/str_guide_user_order_at_table_title" android:fontFamily="@font/sfpd_semibold" android:layout_marginStart="@dimen/_24dp" android:layout_marginEnd="@dimen/_24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imageView2"/>
            <TextView android:textSize="@dimen/_16sp" android:textColor="@color/colorTextTitle" android:id="@+id/textView6" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/_16dp" android:text="@string/str_guide_user_order_at_table_subtitle" android:fontFamily="@font/sfpd_regular" android:layout_marginStart="@dimen/_24dp" android:layout_marginEnd="@dimen/_24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
            <TextView android:textSize="@dimen/_16sp" android:textColor="@color/colorTextTitle" android:id="@+id/txt_instructions_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_16dp" android:text="@string/str_just_three_steps" android:fontFamily="@font/sfpd_regular" android:layout_marginStart="@dimen/_24dp" android:layout_marginEnd="@dimen/_24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
            <TextView android:textSize="@dimen/_16sp" android:textColor="@color/colorTextTitle" android:id="@+id/txt_instructions" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/_16dp" android:text="@string/str_guide_user_order_at_table_instruction" android:lineSpacingExtra="@dimen/_16dp" android:fontFamily="@font/sfpd_semibold" android:layout_marginStart="@dimen/_24dp" android:layout_marginEnd="@dimen/_24dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_instructions_title"/>
            <TextView android:textSize="@dimen/_16sp" android:textColor="@color/color2D72D2" android:id="@+id/txt_list_stores_applied_order_at_table" android:background="@drawable/background_corner_solid_white_shadow" android:padding="@dimen/_16dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_14dp" android:text="@string/str_list_store_applied_order_at_table" android:fontFamily="@font/sfpd_regular" android:layout_marginStart="@dimen/_16dp" android:layout_marginEnd="@dimen/_16dp" app:drawableEndCompat="@drawable/ic_arrow_right" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/txt_instructions"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <ImageView android:id="@+id/img_close" android:padding="@dimen/_16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_close_guide_user" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
    <FrameLayout android:id="@+id/frameLayout" android:background="@color/colorWhite" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0">
        <View android:background="@color/colorLineDivider" android:layout_width="match_parent" android:layout_height="@dimen/_1dp"/>
        <androidx.cardview.widget.CardView android:id="@+id/btn_order_at_table" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/_16dp" app:cardCornerRadius="@dimen/_8dp" app:cardElevation="@dimen/_0dp">
            <TextView android:textSize="@dimen/_16sp" android:textColor="@color/colorWhite" android:gravity="center" android:id="@+id/txt_product_quantity_price" android:background="@color/colorC5671B" android:paddingTop="@dimen/_14dp" android:paddingBottom="@dimen/_14dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/str_order_at_table_now" android:fontFamily="@font/sfpd_bold"/>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
